Use better concatenation for pkg-config paths

--- a/src/common/mircommon.pc.in
+++ b/src/common/mircommon.pc.in
@@ -1,6 +1,6 @@
 prefix=@CMAKE_INSTALL_PREFIX@
-libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
-includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@/mircommon
+libdir=@PKGCONFIG_LIBDIR@
+includedir=@PKGCONFIG_INCLUDEDIR@/mircommon
 
 Name: mircommon
 Description: Mir server library
