--- a/src/miroil/miroil.pc.in
+++ b/src/miroil/miroil.pc.in
@@ -1,6 +1,6 @@
 prefix=@CMAKE_INSTALL_PREFIX@
-libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
-includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@/miroil
+libdir=@PKGCONFIG_LIBDIR@
+includedir=@PKGCONFIG_INCLUDEDIR@/miroil
 
 Name: miral
 Description: Mir "OIL" (lomiri support) library
