--- a/src/renderers/gl/mir-renderer-gl-dev.pc.in
+++ b/src/renderers/gl/mir-renderer-gl-dev.pc.in
@@ -1,5 +1,5 @@
 prefix=@CMAKE_INSTALL_PREFIX@
-includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@/mirrenderer
+includedir=@PKGCONFIG_INCLUDEDIR@/mirrenderer
 
 Name: mir-renderer-gl-dev
 Description: Mir GL renderer development files
