--- a/src/wayland/mirwayland.pc.in
+++ b/src/wayland/mirwayland.pc.in
@@ -1,6 +1,6 @@
 prefix=@CMAKE_INSTALL_PREFIX@
-libdir=${prefix}/@CMAKE_INSTALL_LIBDIR@
-includedir=${prefix}/@CMAKE_INSTALL_INCLUDEDIR@/mirwayland
+libdir=@PKGCONFIG_LIBDIR@
+includedir=@PKGCONFIG_INCLUDEDIR@/mirwayland
 
 Name: mirwayland
 Description: Mir Wayland library
